--- a/pages/interactions/receiving-and-responding.mdx
+++ b/pages/interactions/receiving-and-responding.mdx
@@ -195,9 +195,9 @@ Not all message fields are currently supported.
 
 ###### Interaction Callback Data Flags
 
-| Name      | Value  | Description                                    |
-| --------- | ------ | ---------------------------------------------- |
-| EPHEMERAL | 1 << 6 | only the user receiving the message can see it |
+| Name      | Value        | Description                                    |
+| --------- | ------------ | ---------------------------------------------- |
+| EPHEMERAL | 1 &lt;&lt; 6 | only the user receiving the message can see it |
 
 <Alert type="warn">
 
