--- a/pages/game-sdk/achievements.mdx
+++ b/pages/game-sdk/achievements.mdx
@@ -159,7 +159,7 @@ achievementManager.FetchUserAchievements((res) =>
 
 ## GetUserAchievement
 
-Gets the user achievement for the given achievement id. If you keep a hardcoded mapping of achievement <--> id in your codebase, this will be better than iterating over each achievement. Make sure to call `FetchUserAchievements()` first still!
+Gets the user achievement for the given achievement id. If you keep a hardcoded mapping of achievement &lt;--&gt; id in your codebase, this will be better than iterating over each achievement. Make sure to call `FetchUserAchievements()` first still!
 
 ###### Parameters
 
