--- a/pages/resources/guild.mdx
+++ b/pages/resources/guild.mdx
@@ -1,3 +1,6 @@
+import Alert from '../../components/Alert'
+import RouteHeader from '../../components/RouteHeader'
+
 # Guild Resource
 
 Guilds in Discord represent an isolated collection of users and channels, and are often referred to as "servers" in the UI.
@@ -199,14 +202,14 @@ A partial guild object. Represents an offline guild, or a guild the client is no
 
 ###### System Channel Flags
 
-| Value  | Name                                                     | Description                                                   |
-| ------ | -------------------------------------------------------- | ------------------------------------------------------------- |
-| 1 << 0 | SUPPRESS_JOIN_NOTIFICATIONS                              | Suppress member join notifications                            |
-| 1 << 1 | SUPPRESS_PREMIUM_SUBSCRIPTIONS                           | Suppress premium subscription (boost) notifications           |
-| 1 << 2 | SUPPRESS_GUILD_REMINDER_NOTIFICATIONS                    | Suppress guild setup tips                                     |
-| 1 << 3 | SUPPRESS_JOIN_NOTIFICATION_REPLIES                       | Hide member join sticker reply buttons                        |
-| 1 << 4 | SUPPRESS_ROLE_SUBSCRIPTION_PURCHASE_NOTIFICATIONS        | Suppress role subscription purchase and renewal notifications |
-| 1 << 5 | SUPPRESS_ROLE_SUBSCRIPTION_PURCHASE_NOTIFICATION_REPLIES | Hide role subscription sticker reply buttons                  |
+| Value        | Name                                                     | Description                                                   |
+| ------------ | -------------------------------------------------------- | ------------------------------------------------------------- |
+| 1 &lt;&lt; 0 | SUPPRESS_JOIN_NOTIFICATIONS                              | Suppress member join notifications                            |
+| 1 &lt;&lt; 1 | SUPPRESS_PREMIUM_SUBSCRIPTIONS                           | Suppress premium subscription (boost) notifications           |
+| 1 &lt;&lt; 2 | SUPPRESS_GUILD_REMINDER_NOTIFICATIONS                    | Suppress guild setup tips                                     |
+| 1 &lt;&lt; 3 | SUPPRESS_JOIN_NOTIFICATION_REPLIES                       | Hide member join sticker reply buttons                        |
+| 1 &lt;&lt; 4 | SUPPRESS_ROLE_SUBSCRIPTION_PURCHASE_NOTIFICATIONS        | Suppress role subscription purchase and renewal notifications |
+| 1 &lt;&lt; 5 | SUPPRESS_ROLE_SUBSCRIPTION_PURCHASE_NOTIFICATION_REPLIES | Hide role subscription sticker reply buttons                  |
 
 ###### Privacy Level
 
@@ -588,15 +591,15 @@ Represents a participating user in a [guild](/resources/guild#guild-object).
 
 ###### Guild Member Flags
 
-| Value  | Name                      | Description                                                                                                                                                                                                                                                                     |
-| ------ | ------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 1 << 0 | DID_REJOIN                | This guild member has left and rejoined the guild                                                                                                                                                                                                                               |
-| 1 << 1 | COMPLETED_ONBOARDING      | This guild member has completed onboarding                                                                                                                                                                                                                                      |
-| 1 << 2 | BYPASSES_VERIFICATION ^1^ | This guild member bypasses guild verification requirements                                                                                                                                                                                                                      |
-| 1 << 3 | STARTED_ONBOARDING        | This guild member has started onboarding                                                                                                                                                                                                                                        |
-| 1 << 4 | GUEST                     | This guild member is a [guest](/resources/invite#guest-invites) and not a true member                                                                                                                                                                                           |
-| 1 << 7 | AUTOMOD_QUARANTINED_NAME  | This guild member has been indefinitely quarantined by [an AutoMod Rule](/resources/auto-moderation#automod-rule-object) for their username, display name, or nickname; quarantined users, similar to timed out users, are prevented from interacting with the guild in any way |
-| 1 << 8 | AUTOMOD_QUARANTINED_BIO   | This guild member has been indefinitely quarantined by [an AutoMod Rule](/resources/auto-moderation#automod-rule-object) for their bio; quarantined users, similar to timed out users, are prevented from interacting with the guild in any way                                 |
+| Value        | Name                      | Description                                                                                                                                                                                                                                                                     |
+| ------------ | ------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 1 &lt;&lt; 0 | DID_REJOIN                | This guild member has left and rejoined the guild                                                                                                                                                                                                                               |
+| 1 &lt;&lt; 1 | COMPLETED_ONBOARDING      | This guild member has completed onboarding                                                                                                                                                                                                                                      |
+| 1 &lt;&lt; 2 | BYPASSES_VERIFICATION ^1^ | This guild member bypasses guild verification requirements                                                                                                                                                                                                                      |
+| 1 &lt;&lt; 3 | STARTED_ONBOARDING        | This guild member has started onboarding                                                                                                                                                                                                                                        |
+| 1 &lt;&lt; 4 | GUEST                     | This guild member is a [guest](/resources/invite#guest-invites) and not a true member                                                                                                                                                                                           |
+| 1 &lt;&lt; 7 | AUTOMOD_QUARANTINED_NAME  | This guild member has been indefinitely quarantined by [an AutoMod Rule](/resources/auto-moderation#automod-rule-object) for their username, display name, or nickname; quarantined users, similar to timed out users, are prevented from interacting with the guild in any way |
+| 1 &lt;&lt; 8 | AUTOMOD_QUARANTINED_BIO   | This guild member has been indefinitely quarantined by [an AutoMod Rule](/resources/auto-moderation#automod-rule-object) for their bio; quarantined users, similar to timed out users, are prevented from interacting with the guild in any way                                 |
 
 ^1^ Allows a member who does not meet verification requirements to participate in the guild.
 
