--- a/pages/resources/invite.mdx
+++ b/pages/resources/invite.mdx
@@ -73,9 +73,9 @@ They are also not deletable through [Delete Invite](#delete-invite).
 
 ###### Invite Flags
 
-| Value  | Name  | Description                                                       |
-| ------ | ----- | ----------------------------------------------------------------- |
-| 1 << 0 | GUEST | The invite grants one-time access to a voice channel in the guild |
+| Value        | Name  | Description                                                       |
+| ------------ | ----- | ----------------------------------------------------------------- |
+| 1 &lt;&lt; 0 | GUEST | The invite grants one-time access to a voice channel in the guild |
 
 ###### Example Invite Object
 
