--- a/pages/resources/presence.mdx
+++ b/pages/resources/presence.mdx
@@ -138,17 +138,17 @@ To use an external image via media proxy, specify the URL as the field's value w
 
 ###### Activity Flags
 
-| Value  | Name                        |
-| ------ | --------------------------- |
-| 1 << 0 | INSTANCE                    |
-| 1 << 1 | JOIN                        |
-| 1 << 2 | SPECTATE                    |
-| 1 << 3 | JOIN_REQUEST                |
-| 1 << 4 | SYNC                        |
-| 1 << 5 | PLAY                        |
-| 1 << 6 | PARTY_PRIVACY_FRIENDS       |
-| 1 << 7 | PARTY_PRIVACY_VOICE_CHANNEL |
-| 1 << 8 | EMBEDDED                    |
+| Value        | Name                        |
+| ------------ | --------------------------- |
+| 1 &lt;&lt; 0 | INSTANCE                    |
+| 1 &lt;&lt; 1 | JOIN                        |
+| 1 &lt;&lt; 2 | SPECTATE                    |
+| 1 &lt;&lt; 3 | JOIN_REQUEST                |
+| 1 &lt;&lt; 4 | SYNC                        |
+| 1 &lt;&lt; 5 | PLAY                        |
+| 1 &lt;&lt; 6 | PARTY_PRIVACY_FRIENDS       |
+| 1 &lt;&lt; 7 | PARTY_PRIVACY_VOICE_CHANNEL |
+| 1 &lt;&lt; 8 | EMBEDDED                    |
 
 ###### Example Activity
 
