--- a/pages/topics/voice-connections.mdx
+++ b/pages/topics/voice-connections.mdx
@@ -381,11 +381,11 @@ When a different user's speaking state is updated, the voice server will send an
 
 The following flags can be used as a bitwise mask. For example `5` would be priority and voice.
 
-| Value  | Name       | Description                                                    |
-| ------ | ---------- | -------------------------------------------------------------- |
-| 1 << 0 | Microphone | Normal transmission of voice audio                             |
-| 1 << 1 | Soundshare | Transmission of context audio for video, no speaking indicator |
-| 1 << 2 | Priority   | Priority speaker, lowering audio of other speakers             |
+| Value        | Name       | Description                                                    |
+| ------------ | ---------- | -------------------------------------------------------------- |
+| 1 &lt;&lt; 0 | Microphone | Normal transmission of voice audio                             |
+| 1 &lt;&lt; 1 | Soundshare | Transmission of context audio for video, no speaking indicator |
+| 1 &lt;&lt; 2 | Priority   | Priority speaker, lowering audio of other speakers             |
 
 ### Voice Data Interpolation
 
